syntax = "proto3";

package test;
option go_package = "github.com/kest-lab/kest-cli/test";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
